--- a/ourAppPage/ourapp.html
+++ b/ourAppPage/ourapp.html
@@ -18,7 +18,7 @@
 
   <header class="header">
     <div class="logo">
-      <a href="../homePage/index.html">StadiumsApp</a>
+      <a href="../index.html">StadiumsApp</a>
       <img id="menu_bar" src="../img/menu.png" alt="">
     </div>
     <nav class="navigation">
