--- a/contactPage/contact.html
+++ b/contactPage/contact.html
@@ -30,18 +30,19 @@
   </header>
   <div>
     <h1 class="contact_us_inner underline">Contact Us</h1>
-    <p class="contact_us_p">Want to get in contact? Have an idea for a feature? Or want to discuss
-      what we are doing?<br /><br />
-
-      Contact us using the form below!
-    </p>
+    <div class="contact_us_text">
+      <p>Want to get in contact? Have an idea for a feature? Or want to discuss
+        what we are doing?<br /><br />
+        Contact us using the form below!
+      </p>
+    </div>
     <div class="inputs">
-      <div >
+      <div>
         <div>
           <input class="inputs_inp" type="text" placeholder="First Name">
           <input class="inputs_inp" type="text" placeholder="Last Name">
           <input class="inputs_inp" type="text" placeholder="Email">
-          <textarea class="inputs_inp" placeholder="Message"></textarea>
+          <textarea class="inputs_inp message" placeholder="Message"></textarea>
         </div>
         <button class="btn btn_mnone">Sign Up</button>
       </div>
