--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <header class="header">
+    <header class="header header_col">
         <div class="logo">
             <a href="./index.html">StadiumsApp</a>
             <img id="menu_bar" src="./img/menu.png" alt="">
@@ -48,28 +48,44 @@
         <div class="d">
             <div class="about_app_inner">
                 <div class="about_app_inner_items">
-                    <img src="./img/stadium.png" alt="">
-                    <p>Keep track of stadiums that you have
-                        visited. Find out how many stadiums you've
-                        been to across the leagues.</p>
+                    <div>
+                        <img src="./img/stadium.png" alt="">
+                    </div>
+                    <div>
+                        <p>Keep track of stadiums that you have
+                            visited. Find out how many stadiums you've
+                            been to across the leagues.</p>
+                    </div>
                 </div>
                 <div class="about_app_inner_items">
-                    <img src="./img/XMLID_-1.png" alt="">
-                    <p>Earn Badges and rewards for each group
-                        of stadiums you visit. Compare your numbers
-                        on our leaderboard!</p>
+                    <div>
+                        <img src="./img/XMLID_-1.png" alt="">
+                    </div>
+                    <div>
+                        <p>Earn Badges and rewards for each group
+                            of stadiums you visit. Compare your numbers
+                            on our leaderboard!</p>
+                    </div>
                 </div>
                 <div class="about_app_inner_items">
-                    <img src="./img/testimonial.png" alt="">
-                    <p>Leave reviews and hints and tips
-                        for fellow users! Read our own guides
-                        to make the best of your trip.</p>
+                    <div>
+                        <img src="./img/testimonial.png" alt="">
+                    </div>
+                    <div>
+                        <p>Leave reviews and hints and tips
+                            for fellow users! Read our own guides
+                            to make the best of your trip.</p>
+                    </div>
                 </div>
                 <div class="about_app_inner_items">
-                    <img src="./img/stadium.png" alt="">
-                    <p>Discover new stadiums across multiple leagues
-                        and sports. Find out the latest news on new
-                        developments for your clubs!</p>
+                    <div>
+                        <img src="./img/stadium.png" alt="">
+                    </div>
+                    <div>
+                        <p>Discover new stadiums across multiple leagues
+                            and sports. Find out the latest news on new
+                            developments for your clubs!</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -90,7 +106,8 @@
             <div class="footer_inner">
                 <div class="footer_left">
                     <li class="navigation_li"><a class="navigation_links" href="./index.html">Home</a></li>
-                    <li class="navigation_li"><a class="navigation_links" href="./ourAppPage/ourapp.html">Download</a></li>
+                    <li class="navigation_li"><a class="navigation_links" href="./ourAppPage/ourapp.html">Download</a>
+                    </li>
                     <li class="navigation_li"><a class="navigation_links"
                             href="./contactPage/contact.html">ContactUs</a></li>
                 </div>
