--- a/ourAppPage/ourapp.html
+++ b/ourAppPage/ourapp.html
@@ -63,7 +63,7 @@
           </div>
         </div>
       </div>
-      <p style="padding-bottom: 30px;"><b>RJM Digital Platforms. 2020</b></p>
+      <p><b>RJM Digital Platforms. 2020</b></p>
     </div>
   </footer>
 </body>
