--- a/contactPage/contact.html
+++ b/contactPage/contact.html
@@ -19,11 +19,11 @@
 
   <header class="header">
     <div class="logo">
-      <a href="../index.html">StadiumsApp</a>
+      <a href="../home.html">StadiumsApp</a>
       <img id="menu_bar" src="../img/menu.png" alt="">
     </div>
     <nav class="navigation">
-      <li class="navigation_li"><a class="navigation_links" href="../index.html">Home</a></li>
+      <li class="navigation_li"><a class="navigation_links" href="../home.html">Home</a></li>
       <li class="navigation_li"><a class="navigation_links" href="../ourAppPage/ourapp.html">Download</a></li>
       <li class="navigation_li"><a class="navigation_links nav_loc" href="./contact.html">Contact Us</a></li>
     </nav>
@@ -32,8 +32,8 @@
     <h1 class="contact_us_inner underline">Contact Us</h1>
     <div class="contact_us_text">
       <p>Want to get in contact? Have an idea for a feature? Or want to discuss
-        what we are doing?<br /><br />
-        Contact us using the form below!
+        what we are doing?
+        <span>Contact us using the form below!</span> 
       </p>
     </div>
     <div class="inputs">
@@ -51,7 +51,7 @@
       <div class="container">
         <div class="footer_inner">
           <div class="footer_left">
-            <li class="navigation_li"><a class="navigation_links" href="../index.html">Home</a></li>
+            <li class="navigation_li"><a class="navigation_links" href="../home.html">Home</a></li>
             <li class="navigation_li"><a class="navigation_links" href="../ourAppPage/ourapp.html">Download</a></li>
             <li class="navigation_li"><a class="navigation_links" href="./contact.html">Contact Us</a></li>
           </div>
