--- a/ourAppPage/ourapp.html
+++ b/ourAppPage/ourapp.html
@@ -18,12 +18,12 @@
 
   <header class="header">
     <div class="logo">
-      <a href="../index.html">StadiumsApp</a>
+      <a href="../home.html">StadiumsApp</a>
       <img id="menu_bar" src="../img/menu.png" alt="">
     </div>
     <nav class="navigation">
-      <li class="navigation_li"><a class="navigation_links" href="../index.html">Home</a></li>
-      <li class="navigation_li"><a style="color:black" class="navigation_links nav_loc" href="./ourApp.html">Download</a></li>
+      <li class="navigation_li"><a class="navigation_links" href="../home.html">Home</a></li>
+      <li class="navigation_li"><a style="color:black" class="navigation_links nav_loc" href="./ourapp.html">Download</a></li>
       <li class="navigation_li"><a class="navigation_links" href="../contactPage/contact.html">Contact Us</a></li>
     </nav>
   </header>
@@ -51,7 +51,7 @@
     <div class="container">
       <div class="footer_inner">
         <div class="footer_left">
-          <li class="navigation_li"><a class="navigation_links" href="../index.html">Home</a></li>
+          <li class="navigation_li"><a class="navigation_links" href="../home.html">Home</a></li>
           <li class="navigation_li"><a class="navigation_links" href="./ourapp.html">Download</a></li>
           <li class="navigation_li"><a class="navigation_links" href="../contactPage/contact.html">Contact Us</a></li>
         </div>
